--- a/pfirst/src/app/services-experience/services-experience.component.html
+++ b/pfirst/src/app/services-experience/services-experience.component.html
@@ -1,7 +1,7 @@
 <p>Rating : <img src="../../assets/data/star.png" class="star"> {{getAverageGrade()}}/5</p>
 <span id="history">
   <h3 id="history-title">Services :
-        <button mat-raised-button id="history-button" (click)="openHistoryModal()">Voir plus</button>
+        <button mat-raised-button id="history-button" (click)="openHistoryModal()">Plus de services</button>
   </h3>
 </span>
 <li class="list-group-item" id="history-serv" *ngFor ="let serv of history_for">
