amélioration du design du formulaire et de l'affichage d'une annonce 'Course'

--- a/pfirst/src/app/courses-single/courses-single.component.css
+++ b/pfirst/src/app/courses-single/courses-single.component.css
@@ -1,4 +1,13 @@
 .imageservice{
-    width: 30px;
-	height: 30px;
+    width: 40px;
+	height: 40px;
+}
+
+#budget{
+  width: 60px;
+  height: 30px;
+}
+
+#prix{
+  font-size: 20px;
 }
