--- a/pfirst/src/app/courses-single/courses-single.component.html
+++ b/pfirst/src/app/courses-single/courses-single.component.html
@@ -1,5 +1,55 @@
-<h2>Vous souhaitez aider quelqu'un a faire ses courses! <img src="../../assets/data/menage.png" class="imageservice"/> </h2>
-<h2>Vous allez pouvoir aider {{User}} (cliquer pour voir son profil), il/ elle souhaiterais que vous l'accompagnez : {{Accompagne}}</h2>
-<h2> Voici la liste des courses qui sont a faire:</h2>
-<h2>Pour effectuer ses courses vous aurez un budget de : {{Budget}} euros.</h2>
-<h2>Description,commentaires, indications ... {{Description}}</h2>
+<br>
+
+<h1 class="display-4" align="center">{{User}} a besoin de toi</h1>
+
+
+<div class="jumbotron jumbotron-fluid">
+  <div class="container">
+    <table align="center" cellpadding="20">
+
+      <tr>
+        <td><h2>Service : </h2></td>
+        <td>Courses</td>
+      </tr>
+      <tr>
+        <td><h2>Souhaite être accompagné :</h2></td>
+        <td>OUI [codé en dur]</td>
+      </tr>
+      <tr>
+        <td><h2>Liste des courses :</h2></td>
+      </tr>
+      <tr>
+        <ul class="list-group">
+          <li class="list-group-item d-flex justify-content-between align-items-center">
+            Céréales
+            <span class="badge badge-primary badge-pill">5</span>
+          </li>
+          <li class="list-group-item d-flex justify-content-between align-items-center">
+            Papier toilettes
+            <span class="badge badge-primary badge-pill">2</span>
+          </li>
+          <li class="list-group-item d-flex justify-content-between align-items-center">
+            Bouteille d'eau
+            <span class="badge badge-primary badge-pill">1</span>
+          </li>
+        </ul>
+        <a href="../../assets/data/cuisine.png"
+           download>Télécharger la liste</a>
+      </tr>
+      <tr>
+        <td><h2>Budget</h2></td>
+        <td><span id="budget" class="badge badge-warning"><p id="prix">{{Budget}}€</p></span></td>
+      </tr>
+      <tr>
+        <td><h2>Commentaire</h2>{{Description}}</td>
+
+      </tr>
+    </table>
+
+
+
+  </div>
+</div>
+
+
+<!-- <img src="../../assets/data/menage.png" class="imageservice"/> -->
