--- a/pfirst/src/app/new-courses/new-courses.component.html
+++ b/pfirst/src/app/new-courses/new-courses.component.html
@@ -1,45 +1,57 @@
-<div class="col-sm-8 col-sm-offset-2">
-    <form [formGroup]="coursesForm" (ngSubmit)="onSubmitForm()">
-        <h2>Vous avez choisis de demander a quelqu'un de vous aider a faire les courses avec vous </h2>
+<div class="jumbotron jumbotron-fluid">
+  <div class="container">
+    <h1 class="display-4" align="center">Faire les courses</h1>
+      <table align="center">
 
-        <div class="form-group">
-            <label for ="user" >Votre prenom</label>
-            <input type="text" id="user" class="form-control" formControlName="user">
-        </div>
 
-        <div class= "form-group">
-            <label for="dispo"> Quand voulez vous que les courses soient faites au plus tard ? ( Date et heure)</label>
-            <input type="datetime" name="dispo">
-            <input type="time" name ="dispo2">
-        </div>
+        <div class="col-sm-8 col-sm-offset-2">
+          <form [formGroup]="coursesForm" (ngSubmit)="onSubmitForm()" id="form">
+            <div class="form-group">
+              <label for ="user" >Prénom</label>
+              <input type="text" id="user" class="form-control" formControlName="user">
+            </div>
 
-        <div class= "form-group">
-            <label for="accompagne"> Souhaitez vous que l'on vous accompagne ?</label>
-            <select id="accompagne" class="form-control" formControlName="accompagne">
+            <div class= "form-group">
+              <label for="dispo"> Quand voulez vous que les courses soient faites au plus tard ? ( Date et heure)</label>
+              <input type="datetime" id="dispo" name="dispo">
+              <input type="time" id="dispo" name ="dispo2">
+            </div>
+
+            <div class= "form-group">
+              <label for="accompagne"> Souhaitez vous que l'on vous accompagne ?</label>
+              <select id="accompagne" class="form-control" formControlName="accompagne">
                 <option value="Oui">Oui, je souhaite que l' on m'accompagne.</option>
                 <option value="Non">Non, j'aimerais que la personne qui vient m'aider y aille toute seule.</option>
               </select>
+            </div>
+
+
+
+            <div class="input-group mb-3">
+              <label for="budget">Quel est le montant de votre budget ?</label>
+              <div class="input-group-prepend"><span class="input-group-text">€</span></div>
+              <input type="number" class="form-control" id="budget" aria-label="Budget">
+              <div class="input-group-append"><span class="input-group-text">,00</span></div>
+            </div>
+
+            <div class= "form-group">
+              <label for="liste">Maintenant vous allez creer votre liste de course</label>
+            </div>
+
+            <div class="form group">
+              <label for ="description"> Veuillez indiquer un petit texte qui aidera a mieux coller a vos attentes.</label>
+              <!--<input type="text" id="description" class="form-control" formControlName="description"> -->
+              <textarea class="form-control" aria-label="With textarea" id="description" class="form-control" formControlName="description"></textarea>
+            </div>
+            <br>
+
+            <button type="submit" class="btn btn-primary">Soumettre</button>
+          </form>
+
         </div>
 
 
-
-        <div class="input-group mb-3">
-            <label for="budget">Quel est le montant de votre budget ?</label>
-            <div class="input-group-prepend"><span class="input-group-text">€</span></div>
-            <input type="number" class="form-control" aria-label="Budget">
-            <div class="input-group-append"><span class="input-group-text">,00</span></div>
-        </div>
-
-        <div class= "form-group">
-            <label for="liste">Maintenant vous allez creer votre liste de course</label>
-        </div>
-
-        <div class="form group">
-            <label for ="description"> Veuillez indiquer un petit texte qui aidera a mieux coller a vos attentes.</label>
-            <input type="text" id="description" class="form-control" formControlName="description">
-        </div>
-
-        <button type="submit" class="btn btn-primary">Soumettre</button>
-    </form>
-
+      </table>
+  </div>
 </div>
+
