ajustement component former-service

--- a/pfirst/src/app/modal-history/modal-history.component.html
+++ b/pfirst/src/app/modal-history/modal-history.component.html
@@ -33,12 +33,12 @@
     </div>
   </section>
   <footer id="modal-hist-footer">
-    <table cellpadding="10">
+    <table cellpadding="10" width="1000px">
       <tr>
-        <td>
+        <td align="left">
           <button class="btn btn-primary" (click)="decIndex()">Précédent</button>
         </td>
-        <td>
+        <td align="right">
           <button class="btn btn-primary" (click)="incIndex()">Suivant</button>
         </td>
       </tr>
