--- a/pfirst/src/app/former-service/former-service.component.css
+++ b/pfirst/src/app/former-service/former-service.component.css
@@ -14,6 +14,23 @@
 
 .icone-cat
 {
-  height: 40px;
+  height: 60px;
   width: auto;
+}
+
+#starIcon
+{
+  vertical-align: -115%;
+  height: 70px;
+  width: auto;
+}
+
+#commentParagraph
+{
+  text-align: center;
+}
+
+.formerServP
+{
+  font-size: 30px;
 }
