--- a/pfirst/src/app/former-service/former-service.component.html
+++ b/pfirst/src/app/former-service/former-service.component.html
@@ -1,13 +1,39 @@
-<table cellpadding="5" border="solid red 3px" width="100%">
+<table cellpadding="5" width="100%">
   <tr>
     <td>
-      <p> Le {{getDescript()[0]}}, {{par}} a aidé {{pour}} !</p>
+      <p class="formerServP"> Le {{getDescript()[0]}}, {{par}} a aidé {{pour}} {{descriptCategorie[categorie]}} !</p>
     </td>
     <td align="right">
+      <!-- img se se rechargent pas -->
       <img class="icone-cat" *ngIf="menage" src="../../assets/data/menage.png">
       <img class="icone-cat" *ngIf="accompagnement" src="../../assets/data/accompagner.png">
       <img class="icone-cat" *ngIf="cuisine" src="../../assets/data/cuisine.png">
       <img class="icone-cat" *ngIf="course" src="../../assets/data/cuisine.png">
+    </td>
+  </tr>
+  <tr>
+    <td>
+      <p class="formerServP">
+        <span *ngIf="helperLook">{{pour}}</span>
+        <span *ngIf="!helperLook">{{par}}</span>
+         vous a attribué la note de {{note}}/5
+        <img id="starIcon" src="../../assets/data/star.png">
+      </p>
+    </td>
+  </tr>
+  <tr>
+    <td align="left">
+      <img height="50px" width="50px" src="../../assets/data/double_cote.png">
+    </td>
+    <td align="right">
+      <img height="50px" width="50px" src="../../assets/data/double_cote.png">
+    </td>
+  </tr>
+  <tr>
+    <td colspan="2">
+      <p id="commentParagraph" class="formerServP">
+        {{commentaire}}
+      </p>
     </td>
   </tr>
 </table>
