--- a/pfirst/src/styles.css
+++ b/pfirst/src/styles.css
@@ -15,7 +15,5 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
 
 
 mat-dialog-container#modal-history-component {
-  border: 3px solid #262626;
-  border-radius: 11px;
-  background-color: #1a1a1a;
+  background-color: #25232;
 }
