modif modal + profil

--- a/pfirst/src/app/former-service/former-service.component.html
+++ b/pfirst/src/app/former-service/former-service.component.html
@@ -16,7 +16,7 @@
       <p class="formerServP">
         <span *ngIf="helperLook">{{pour}}</span>
         <span *ngIf="!helperLook">{{par}}</span>
-         vous a attribué la note de {{note}}/5
+          a attribué une note de {{note}}/5
         <img id="starIcon" src="../../assets/data/star.png">
       </p>
     </td>
