--- a/pfirst/src/app/modal-history/modal-history.component.html
+++ b/pfirst/src/app/modal-history/modal-history.component.html
@@ -14,7 +14,8 @@
 
   <section>
     <div id="for-wrapper" *ngIf="showFor">
-      <app-former-service [pour]="this.history_for[index_for].pour"
+      <app-former-service [helperLook]="false"
+                          [pour]="this.history_for[index_for].pour"
                           [par]="this.history_for[index_for].par"
                           [categorie]="this.history_for[index_for].categorie"
                           [note]="this.history_for[index_for].note"
@@ -23,7 +24,8 @@
       </app-former-service>
     </div>
     <div id="by-wrapper" *ngIf="showBy">
-        <app-former-service [pour]="this.history_by[index_by].pour"
+        <app-former-service [helperLook]="true"
+                            [pour]="this.history_by[index_by].pour"
                             [par]="this.history_by[index_by].par"
                             [categorie]="this.history_by[index_by].categorie"
                             [note]="this.history_by[index_by].note"
