--- a/pfirst/src/app/profil/profil.component.html
+++ b/pfirst/src/app/profil/profil.component.html
@@ -46,8 +46,8 @@
   </table>
   <div id="experience-wrapper">
     <table width="100%">
-      <tr align="center">
-        <td align="center">
+      <tr align="left">
+        <td align="left">
           <app-services-experience></app-services-experience>
         </td>
       </tr>
