--- a/pfirst/src/app/propose/propose.component.html
+++ b/pfirst/src/app/propose/propose.component.html
@@ -9,7 +9,25 @@
           [serviceImage]="service.image"
           [index]="i"
           [id]="service.id"></app-service>
-       
+
       </ul>
     </div>
   </div>
+
+<h1>###########TEST BILEL##########</h1>
+
+<div class="col-xs-12">
+  <div class="row">
+    <h2> Les services qui sont actuellement proposes</h2>
+    <ul class="list-group">
+      <app-service *ngFor ="let service of services_db,let i =index"
+                   [serviceName]="service.name"
+                   [serviceUser]="service.user"
+                   [serviceDescription]="service.description"
+                   [serviceImage]="service.image"
+                   [index]="i"
+                   [id]="service.id"></app-service>
+
+    </ul>
+  </div>
+</div>
