synchronisation des champs avec backend

--- a/pfirst/src/app/auth/auth.component.html
+++ b/pfirst/src/app/auth/auth.component.html
@@ -6,10 +6,10 @@
   <table align="center" cellpadding="5">
     <tr>
       <td>
-        <label for="who">
+        <label for="mail">
           Adresse mail
         </label>
-        <input type="text" id="who" class="form-control" name="mail" placeholder="name@example.com" ngModel>
+        <input type="text" id="mail" class="form-control" name="mail" placeholder="name@example.com" ngModel>
       </td>
     </tr>
     <tr>
