--- a/pfirst/src/app/courses-single/courses-single.component.html
+++ b/pfirst/src/app/courses-single/courses-single.component.html
@@ -28,7 +28,7 @@
           </ul>
 
           <a href="../../assets/data/cuisine.png"
-             download>Télécharger la liste</a>
+             download>Copier la liste</a>
         </td>
       </tr>
       <tr>
