synchronisation des champs avec backend #3

--- a/pfirst/src/app/courses-single/courses-single.component.html
+++ b/pfirst/src/app/courses-single/courses-single.component.html
@@ -27,8 +27,8 @@
             </div>
           </ul>
 
-          <a href="../../assets/data/cuisine.png"
-             download>Copier la liste</a>
+          <button class="button btn-secondary" value="Copier" class="js-copy" data-target=this.liste_a_copier>
+            Copier la liste</button>
         </td>
       </tr>
       <tr>
