--- a/pfirst/src/app/global-navbar/global-navbar.component.html
+++ b/pfirst/src/app/global-navbar/global-navbar.component.html
@@ -10,9 +10,7 @@
         </button>
         -->
       <td>
-        <button (click)="this.switchMenu()">
-          Profil
-        </button>
+        <div id="roundProfilPic" routerLink="profil"></div>
         <ul *ngIf="this.showProfilMenu">
           <li>Mes infos</li>
           <li>Mes notifs</li>
