--- a/pfirst/src/app/global-navbar/global-navbar.component.html
+++ b/pfirst/src/app/global-navbar/global-navbar.component.html
@@ -20,11 +20,28 @@
             <button ngbDropdownItem>Something else is here</button>
           </div>
         </div>
+-->
+        <!-- ne s'affiche pas
+        <div class="navbar-collapse" [class.collapse]="collapsed" id="navbarContent" style="border: 3px solid red">
+          <ul class="navbar-nav ml-auto">
+            <li class="nav-item" ngbDropdown>
+              <a class="nav-link" style="cursor: pointer" ngbDropdownToggle id="navbarDropdown1" role="button">
+                Static
+              </a>
+              <div ngbDropdownMenu aria-labelledby="navbarDropdown1" class="dropdown-menu">
+                <a ngbDropdownItem href="#" (click)="$event.preventDefault()">Action</a>
+                <a ngbDropdownItem href="#" (click)="$event.preventDefault()">Another action</a>
+                <a ngbDropdownItem href="#" (click)="$event.preventDefault()">Something else here</a>
+              </div>
+            </li>
+          </ul>
+        </div>
         -->
         <ul *ngIf="this.showProfilMenu">
           <li>Mes infos</li>
           <li>Mes notifs</li>
         </ul>
+        <!--
         <div class="dropdown">
           <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
             {{this.userService.getInitials()}}
@@ -35,6 +52,7 @@
             <a class="dropdown-item" routerLink="notifications">Mes notifications</a>
           </div>
         </div>
+        -->
       </td>
       <td>
         <p style="color:white">route : {{path}} ; hasUrl : <span *ngIf="hasUrl">true</span> </p>
