ajout modal menu navbar

--- a/pfirst/src/app/global-navbar/global-navbar.component.css
+++ b/pfirst/src/app/global-navbar/global-navbar.component.css
@@ -11,3 +11,9 @@
   background-image: url("../../assets/data/pdp-test.jpg");
   background-size: cover;
 }
+
+#navbar-user-button-wrapper
+{
+  height: 10px;
+  width: auto;
+}
