ajout d'un logo course

--- a/pfirst/src/app/demande/demande.component.html
+++ b/pfirst/src/app/demande/demande.component.html
@@ -39,9 +39,9 @@
     <td>
       <div class="zoom">
         <div class="icone">
-          <img *ngIf="course" style="cursor:pointer" id="accompagner_logo" src="../assets/data/accompagner.png" alt=""
+          <img *ngIf="course" style="cursor:pointer" id="accompagner_logo" src="../assets/data/courses.png" alt=""
                (click)="menage=false;accompagner=false;cuisine=false;course=true;">
-          <img *ngIf="!course" style="cursor:pointer" id="accompagner_logo1" src="../assets/data/accompagner1.png" alt=""
+          <img *ngIf="!course" style="cursor:pointer" id="accompagner_logo1" src="../assets/data/courses1.png" alt=""
                (click)="menage=false;accompagner=false;course=true;cuisine=false;">
         </div>
       </div>
