--- a/pfirst/src/styles.css
+++ b/pfirst/src/styles.css
@@ -15,9 +15,9 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
 
 
 mat-dialog-container#modal-history-component {
-  background-color: #25232;
+  background-color: #343a40;
 }
 
-mat-dialog-container#modal-user{
-  background-color: #000000;
+mat-dialog-container#modal-user-component{
+  background-color: #343a40;
 }
