--- a/pfirst/src/app/demande/demande.component.html
+++ b/pfirst/src/app/demande/demande.component.html
@@ -51,19 +51,15 @@
 </table>
 
 <div *ngIf="menage" id="menage">
-
+  <app-new-menage></app-new-menage>
 </div>
 
 <div *ngIf="cuisine" id="cuisine">
-
+<app-new-cuisine></app-new-cuisine>
 </div>
 
 <div *ngIf="accompagner" id="accompagner">
-
-</div>
-
-<div *ngIf="accompagner" id="accompagner">
-
+<app-new-accompage></app-new-accompage>
 </div>
 
 <div *ngIf="course" id="course">
