ajout ng-bootstrap

--- a/pfirst/src/app/services-experience/services-experience.component.html
+++ b/pfirst/src/app/services-experience/services-experience.component.html
@@ -2,6 +2,7 @@
   <tr>
     <td colspan="2" align="center">
       <p>Rating : <img src="../../assets/data/star.png" class="star"> {{getAverageGrade()}}/5</p>
+      <ngb-rating rate="8"></ngb-rating>
     </td>
   </tr>
   <tr>
