--- a/pfirst/src/styles.css
+++ b/pfirst/src/styles.css
@@ -1,4 +1,5 @@
 /* You can add global styles to this file, and also import other style files */
+@import '~bootstrap/dist/css/bootstrap.css';
 
 body{
   /*background-image: url("/assets/data/all.png");
@@ -8,7 +9,6 @@ body{
   background-image: url("/assets/data/inf.png");
 
 }
-
 
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
