--- a/pfirst/src/app/new-courses/new-courses.component.html
+++ b/pfirst/src/app/new-courses/new-courses.component.html
@@ -14,7 +14,7 @@
             <!--#############DISPO######################-->
             <div class= "form-group">
               <label for="dispo"> <h2>Quand voulez vous que les courses soient faites au plus tard ? (Date et heure)</h2></label>
-              <input type="datetime" id="dispo" name="dispo">
+              <input type="date" id="dispo" name="dispo">
               <input type="time" id="dispo" name ="dispo2">
             </div>
 
